# sem8-ao-document-recognition

./: .dockerignore  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  create_env.sh  init_submodules.sh  manage.py  production.compose.yml  pyproject.toml  readme.md  requirements-ml.txt  requirements.txt
.github/workflows/: tui-publish.yml  tui.publish.yml
api/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
api/fixtures/: initial_data.yaml
api/persons/: apps.py  models.py  serializers.py  urls.py  views.py
api/persons/migrations/: 0001_initial.py  0002_alter_facevector_uuid.py  0003_alter_facevector_uuid.py  0004_person_face_vector_delete_facevector.py  (+1 more)
api/persons/services/: recognition_service.py
api/todo_api/: apps.py  models.py  urls.py  views.py
api/utils/: apps.py
db/: docker-compose.yml  readme.md  vector-test.sql
docker/: Dockerfile  static.nginx.conf
document-generation/: .env-example  .gitignore  _generate-all.sh  contribute.md  documents-di-recognition.ipynb  driving-licence-face-recognition.ipynb  driving-licence-ocr.ipynb  driving-licence-rekognition.ipynb  driving-licence.py  driving-license.ipynb  driving-license.py  els-ocr.ipynb  els-rekognition.ipynb  els.ipynb  els.py  face.ipynb  generate-all.sh  identity-card.py  personal.csv  t81_558_class_07_2_gan_intro.ipynb
document_recognition/: asgi.py  settings.py  urls.py  wsgi.py
document_recognition/utils/: apps.py
tui/: .env.example  .eslintrc.cjs  .prettierrc  README.md  components.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
tui/src/: Layout.tsx  index.css  main.tsx  routes.tsx
tui/src-tauri/: Cargo.toml  tauri.conf.json
ui/: __main__.py  widgets.py  window.py
ui/ui/: widgets.py  window.py
(+97 files in other folders)
