[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ylo-igbn"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "torch==2.3.0+cu118",
    "torchaudio==2.3.0+cu118",
    "torchvision==0.18.0+cu118",
    "Jinja2==3.1.3",
    "notebook",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "face_recognition",
    "opencv-python",
    "boto3",
    "azure-ai-documentintelligence==1.0.0b2",
    "PySide6",
    "python-dotenv"
]
[tool.pip-tools]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]